# CppCodeQualityTool

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  _vcpkg.json  vcpkg-configuration.json  vcpkg-setup.sh
.github/workflows/: build.yml
Doxygen/html/: _file_utils_8h_source.html  _function_analyzer_8h_source.html  _l_l_m_interface_8h_source.html  _open_a_i_l_l_m_interface_8h_source.html  _options_8h_source.html  annotated.html  class_function_analyzer-members.html  class_function_analyzer.html  class_l_l_m_interface-members.html  class_l_l_m_interface.html  class_open_a_i_l_l_m_interface-members.html  class_open_a_i_l_l_m_interface.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  namespace_file_utils.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  struct_function_info-members.html  struct_function_info.html  struct_options-members.html  struct_options.html
Doxygen/html/search/: all_0.js  all_1.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  namespaces_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_5.js
src/: CommandFactory.cpp  CommandFactory.h  Commands.cpp  Commands.h  FileUtils.cpp  FileUtils.h  FunctionAnalyzer.cpp  FunctionAnalyzer.h  LLMInterface.h  OpenAILLMInterface.cpp  OpenAILLMInterface.h  Options.cpp  Options.h  main.cpp
tests/: FileHandlerTest.cpp  FileUtilsTest.cpp  FunctionAnalyzerTest.cpp  OptionsTest.cpp  main.cpp
